# PROXIMA

./: .gitignore  ARTIFACT.md  CITATION.cff  COMPLETE_SUMMARY.md  COMPLETION_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Design-doc.txt  FINAL_RESULTS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RESEARCH_PAPER.md  SAFETY_CHECKLIST.md  START_HERE.md  Synthetic-data-generator.txt  app.py  pyproject.toml  requirements.txt  setup.py  start_backend.bat  test_api.py
docs/: REAL_DATASETS.md
docs/patent/: PATENT_ABSTRACT.md  PATENT_CLAIMS.md  TECHNICAL_DIAGRAMS.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: DataGenerator.jsx  DecisionSimulation.jsx  FragilityAnalysis.jsx  ProxyScores.jsx
notebooks/: 01_data_exploration.ipynb
paper/: generate_figures.py  proxima_paper.tex  proxima_paper_publishready.tex
scripts/: analyze_kuairec.py  create_paper_visualizations.py  explore_datasets.py  integrate_criteo.py  integrate_criteo_simple.py  integrate_kuairec.py  quick_check.py  reproduce_all.py
src/proxima/: __init__.py  run_mvp.py
src/proxima/api/: __init__.py  main.py
src/proxima/evaluation/: __init__.py  decision_sim.py  metrics.py  statistical_tests.py
src/proxima/generator/: __init__.py  simulate.py
src/proxima/models/: __init__.py  baseline.py
src/proxima/visualization/: __init__.py  plots.py
tests/: test_baseline.py  test_evaluation.py  test_generator.py
